--- a/theme.sass
+++ b/theme.sass
@@ -16,7 +16,7 @@
     // Colors
     --color-back: #fff
     --color-front: #444
-    --color-theme: #de7878
+    --color-theme: #FE3C72
     --color-theme-contrast: #fff
     --color-subtle-dark: #777
     --color-subtle-medium: #eee
