Add hover styles in Chapter and Exercise elements

--- a/src/styles/exercise.module.sass
+++ b/src/styles/exercise.module.sass
@@ -8,6 +8,11 @@
     position: relative
     background: var(--color-back)
 
+.focused
+    &:hover
+        cursor: pointer
+        border-color: var(--color-theme)
+
 .wide
     width: 95%
 
