--- a/src/styles/index.module.sass
+++ b/src/styles/index.module.sass
@@ -15,6 +15,10 @@
     border-radius: var(--border-radius)
     margin-bottom: 2rem
 
+    &:hover
+        cursor: pointer
+        border-color: var(--color-theme)
+
 .chapter-title
     font-family: var(--font-display)
     font-size: var(--font-size-lg)
