--- a/theme.sass
+++ b/theme.sass
@@ -17,6 +17,7 @@
     --color-back: #fff
     --color-front: #444
     --color-theme: #FE3C72
+    --color-focused-background: rgba(254, 62, 117, 0.05)
     --color-theme-contrast: #fff
     --color-subtle-dark: #777
     --color-subtle-medium: #eee
